#1834 Replace String concatenation of File.separator with Path.of